--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@ body {
     background-color: var(--color6);
     margin: 0;
     padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -42,6 +47,8 @@ p {
 
 main {
     background-color: white;
+    width: 70vw;
+    min-width: min-content;
 }
 
 form {
@@ -51,6 +58,15 @@ form {
     align-items: center;
     margin: 30px;
     padding: 20px;
+    border: 2px slateblue solid;
+}
+
+.user-info-divs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 2px greenyellow solid;
 }
 
 .pack-div { 
@@ -59,10 +75,6 @@ form {
 
 input:checked + img {
     border: solid 5px black;
-}
-
-#user-label {
-   float: right;
 }
   
   @keyframes pulse {
