--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@ main {
     background-color: white;
     width: 70vw;
     min-width: min-content;
+    border-radius: 5px;
 }
 
 form {
@@ -58,7 +59,6 @@ form {
     align-items: center;
     margin: 30px;
     padding: 20px;
-    border: 2px slateblue solid;
 }
 
 .user-info-divs {
@@ -66,15 +66,27 @@ form {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    border: 2px greenyellow solid;
+    padding-top: 20px;
 }
 
 .pack-div { 
     display: none;
 }
 
+button {
+    cursor: pointer;
+    border-radius: 5px;
+    margin-left: 5px;
+}
+
+button:hover {
+    background-color: var(--color5);
+}
+
 input:checked + img {
     border: solid 5px black;
+    border-radius: 5px;
+
 }
   
   @keyframes pulse {
