--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,21 @@ body {
     --color4: #eec0c6ff;
     --color5: #e58c8aff;
     --color6: #fff8e7;
-    
+
+    /* 
+
+    Accent colors 
+    39c3ef dark blue
+
+    E58c8a dark pink
+
+    Ffbd59 dark yellow
+
+    2bb673 dark green 
+
+    8c52ff dark purple  */
+
+
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
@@ -86,7 +100,6 @@ button:hover {
 input:checked + img {
     border: solid 5px black;
     border-radius: 5px;
-
 }
   
   @keyframes pulse {
