--- a/3-game-page/game.css
+++ b/3-game-page/game.css
@@ -1,4 +1,25 @@
-img {
-    width: 900px;
-    height: auto;
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+img {
+    width: 80vw;
+    height: auto;
+    z-index: 0;
+}
+
+#game-prompt {
+    z-index: 1;
+    position: absolute;
+    top: 105%;
+    border: 3px solid red;
+    width: 70vw;
+}
+
+button {
+    justify-content: flex-end;
+}
+
