--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
     --color3: #7ee8faff;
     --color4: #eec0c6ff;
     --color5: #e58c8aff;
-    --color6: #fff8e7;
+    --color6: #f5edda;
 
     /* 
 
@@ -53,6 +53,11 @@ h1 {
 
 nav {
     margin: 10px;
+    background-color: white;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 a {
@@ -62,7 +67,7 @@ a {
 }
 
 a:hover {
-    color: var(--color5);
+    background-color: var(--color5);
 }
 
 p {
