--- a/3-game-page/game.css
+++ b/3-game-page/game.css
@@ -5,21 +5,32 @@ main {
     align-items: center;
 }
 
+.letter-tiles {
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    z-index: 1;
+    position: relative;
+    bottom: 400px;
+    left: 250px;
+}
+
 img {
-    width: 80vw;
-    height: auto;
+    width: 900px;
+    height: 600px;
     z-index: 0;
 }
 
 #game-prompt {
     z-index: 1;
     position: absolute;
-    top: 105%;
+    top: 650px;
     border: 3px solid red;
-    width: 70vw;
+    width: 900px;
+    max-height: 80vw;
 }
 
-button {
-    justify-content: flex-end;
+#find-letter-prompt {
+    font-size: 28px;
 }
-
