added radio buttons to letter inputs

--- a/3-game-page/game.css
+++ b/3-game-page/game.css
@@ -34,3 +34,10 @@ img {
 #find-letter-prompt {
     font-size: 28px;
 }
+input {
+    display: none;
+}
+input:checked + img {
+    border: solid 5px black;
+    border-radius: 5px;
+}
