link not working on completed adventure

--- a/2-choose-adventure/adventures.css
+++ b/2-choose-adventure/adventures.css
@@ -24,3 +24,8 @@ label {
     justify-content: center;
     align-items: center;
 }
+
+a:visited {
+    pointer-events: none; 
+    cursor: default; 
+}
