--- a/styles/welcome-page.css
+++ b/styles/welcome-page.css
@@ -17,8 +17,9 @@ header {
 
 main {
     height: 80%;
-    width: 100%;
+    width: 70%;
     font-size: 3rem;
+    text-align: center;
 }
 
 a:hover {
