changed opacity after adventure complete and change to no red border after visited

--- a/2-choose-adventure/adventures.css
+++ b/2-choose-adventure/adventures.css
@@ -20,7 +20,6 @@ section {
 label {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -28,4 +27,8 @@ label {
 a:visited {
     pointer-events: none; 
     cursor: default; 
+}
+
+a:visited, a:hover {
+   
 }
