--- a/styles/style.css
+++ b/styles/style.css
@@ -55,10 +55,12 @@ a {
 
 a:hover {
     background-color: white;
+    
 }
 
-
 a:hover:visited {
+    pointer-events: none; 
+    cursor: default; 
     background-color: var(--color5);
 }
 
