--- a/3-game-page/game.css
+++ b/3-game-page/game.css
@@ -41,6 +41,10 @@ input {
 }
 
 input:checked + img {
-    border: solid 5px black;
-    border-radius: 5px;
+    border: white;
+}
+
+input + img:hover {
+    height: 120px;
+    width: 120px;
 }
